style.fix(index.html slider.css) 指摘された場所を修正、aタグ・テーブル 要素を追加しました

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- bxslider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     
     <!-- favicon -->
@@ -44,18 +46,18 @@
 
     <!-- image slider -->
     <div class="image_slider layout_margin_b">
-        <div class="slider abcd">
+        <div class="slider">
 
-            <!-- 1枚目 -->
+            <!-- 1 枚目 -->
             <section>
                 <div class="image_layout_text absolute">
-                    <h1>ChieProメンバー募集中</h1></br>
+                    <h1>ChiePro メンバー募集中</h1></br>
                     <p>初心者の方でも大歓迎！<br>対応言語多数</p> 
                 </div>
-                    <img src="./img/top_img1.jpg" alt="image"class="img_size">
+                    <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="layout_img">
             </section>
 
-            <!-- ２枚目 -->
+            <!-- 2 枚目 -->
             <section>
                 <div class="top_img2">
                     <div class="image_layout_text absolute">
@@ -64,10 +66,10 @@
                         <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
                     </div>
                  </div>
-                <img src="./img/top_img2.jpg" alt="image"class="img_size">
+                <img src="./img/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="layout_img">
             </section>
 
-            <!-- 3枚目 -->
+            <!-- 3 枚目 -->
             <section>
                 <div class="absolute">
                     <div class="image_layout_text image_top_text">
@@ -81,33 +83,58 @@
                         <i class="fab fa-java"></i>
                     </div>
                 </div>
-                <img src="./img/top_img3.jpg" alt="image"class="img_size">
+                <a href="#">
+                    <img src="./img/top_img3.jpg" alt="学習プログラミング言語" class="layout_img">
+                </a>
             </section>
 
-            <!-- 4枚目 -->
+            <!-- 4 枚目 -->
             <section>
                 <div class="absolute">
                     <div class="image_layout_text image_top_text">
-                        <p>使用ツール</p>
+                        <p>ChiePro 標準ツール</p>
                     </div>
+
                     <div class="image_layout_text">
-                        <table>
-                            <tr>
-                                <td>チャットツール</td>
-                                <td>Slack</td>
-                            </tr>
-                            <tr>
-                                <td>バージョン管理</td>
-                                <td>Github</td>
-                            </tr>
-                            <tr>
-                                <td>開発ソフト</td>
-                                <td>eclipse･VSC</td>
-                            </tr>
+                        <table class="design_table">
+                        <tr>
+                            <td>チャットツール</td>
+                            <td>
+                                <a href="https://slack.com/intl/ja-jp">
+                                    Slack
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>バージョン管理</td>
+                            <td>
+                                <a href="https://github.com/">
+                                    Github
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">開発ソフト</td>
+                            <td>
+                                <a href="https://www.eclipse.org/">
+                                    Eclipse
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://code.visualstudio.com/">
+                                    VSCode
+                                </a>
+                            </td>
+                        </tr>
                         </table>
                     </div>
+
                 </div>
-                <img src="./img/top_img4.jpg" alt="image"class="img_size">
+                <a href="#">
+                    <img src="./img/top_img4.jpg" alt="ChiePro 標準ツール" class="layout_img">
+                </a>
             </section>
 
         </div> 
