style.fix(index.html slider.css) 指摘された場所を修正、aタグ・テーブル 要素を追加しました

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <p>ChiePro 標準ツール</p>
                     </div>
 
-                    <div class="image_layout_text">
+                    <div class="layout_table">
                         <table class="design_table">
                         <tr>
                             <td>チャットツール</td>
