refactor(index.html,layout.css,slider.css):指摘された部分を修正しました。Issue #11

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- bxslider -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     
@@ -27,7 +29,7 @@
 </head>
 
 <body>
-
+    
     <!-- header -->
     <header>
         <div class="logo">
@@ -51,10 +53,12 @@
             <!-- 1 枚目 -->
             <section>
                 <div class="image_layout_text absolute">
-                    <h1>ChiePro メンバー募集中</h1></br>
-                    <p>初心者の方でも大歓迎！<br>対応言語多数</p> 
+                    <h1>ChiePro メンバー募集中</h1>
+                    <p>初心者の方でも大歓迎！</p>
+                    <p>対応言語多数</p> 
                 </div>
-                    <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="layout_img">
+
+                <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="layout_img">
             </section>
 
             <!-- 2 枚目 -->
@@ -66,6 +70,7 @@
                         <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
                     </div>
                  </div>
+
                 <img src="./img/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="layout_img">
             </section>
 
@@ -75,6 +80,7 @@
                     <div class="image_layout_text image_top_text">
                         <p>学習プログラミング言語</p>
                     </div>
+
                     <div class="image_layout_text image_icon">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
@@ -83,6 +89,7 @@
                         <i class="fab fa-java"></i>
                     </div>
                 </div>
+
                 <a href="#">
                     <img src="./img/top_img3.jpg" alt="学習プログラミング言語" class="layout_img">
                 </a>
@@ -97,37 +104,31 @@
 
                     <div class="layout_table">
                         <table class="design_table">
+                        <tbody>
                         <tr>
                             <td>チャットツール</td>
                             <td>
-                                <a href="https://slack.com/intl/ja-jp">
-                                    Slack
-                                </a>
+                                <a href="https://slack.com/intl/ja-jp">Slack</a>
                             </td>
                         </tr>
                         <tr>
-                            <td>バージョン管理</td>
+                            <td>バージョン管理ツール</td>
                             <td>
-                                <a href="https://github.com/">
-                                    Github
-                                </a>
+                                <a href="https://github.com/">Github</a>
                             </td>
                         </tr>
                         <tr>
-                            <td rowspan="2">開発ソフト</td>
+                            <td rowspan="2">統合開発環境</td>
                             <td>
-                                <a href="https://www.eclipse.org/">
-                                    Eclipse
-                                </a>
+                                <a href="https://www.eclipse.org/">Eclipse</a>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a href="https://code.visualstudio.com/">
-                                    VSCode
-                                </a>
+                                <a href="https://code.visualstudio.com/">VSCode</a>
                             </td>
                         </tr>
+                        </tbody>
                         </table>
                     </div>
 
