--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/fakeLoader.min.js"></script>
 </head>
 
 <body>
+    <!-- loading -->
+    <div id="fakeloader"></div>
 
     <!-- header -->
     <header>
@@ -71,6 +74,10 @@
     <footer>
         <p>footer</p>
     </footer>
+
+    <script type="text/javascript">
+        $("#fakeloader").fakeLoader();
+        </script>
 
 </body>
 </html>
