--- a/index.html
+++ b/index.html
@@ -48,40 +48,40 @@
 
     <!-- image slider -->
     <div class="image_slider layout_margin_b">
-        <div class="slider">
+        <div class="slider_wrap">
 
             <!-- 1 枚目 -->
             <section>
-                <div class="image_layout_text absolute">
+                <div class="tips slider_tips_absolute">
                     <h1>ChiePro メンバー募集中</h1>
                     <p>初心者の方でも大歓迎！</p>
                     <p>対応言語多数</p> 
                 </div>
 
-                <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="layout_img">
+                <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="slider_content">
             </section>
 
             <!-- 2 枚目 -->
             <section>
-                <div class="top_img2">
-                    <div class="image_layout_text absolute">
+                <div class="tips_solicit">
+                    <div class="tips slider_tips_absolute">
                         <p>あなたの小さなアイデアで世界は変わる。</p>
                         <p>「あったらいいな」、「こんなの作りたい」を自分の手で作ってみよう。</p>
                         <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
                     </div>
                  </div>
 
-                <img src="./img/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="layout_img">
+                <img src="./img/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="slider_content">
             </section>
 
             <!-- 3 枚目 -->
             <section>
-                <div class="absolute">
-                    <div class="image_layout_text image_top_text">
+                <div class="slider_tips_absolute">
+                    <div class="tips tips_title">
                         <p>学習プログラミング言語</p>
                     </div>
 
-                    <div class="image_layout_text image_icon">
+                    <div class="tips program_lang_icon">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
                         <i class="fab fa-php"></i>
@@ -91,18 +91,18 @@
                 </div>
 
                 <a href="#">
-                    <img src="./img/top_img3.jpg" alt="学習プログラミング言語" class="layout_img">
+                    <img src="./img/top_img3.jpg" alt="学習プログラミング言語" class="slider_content">
                 </a>
             </section>
 
             <!-- 4 枚目 -->
             <section>
-                <div class="absolute">
-                    <div class="image_layout_text image_top_text">
+                <div class="slider_tips_absolute">
+                    <div class="tips tips_title">
                         <p>ChiePro 標準ツール</p>
                     </div>
 
-                    <div class="layout_table">
+                    <div class="tips_table_wrap">
                         <table class="design_table">
                         <tbody>
                         <tr>
@@ -134,7 +134,7 @@
 
                 </div>
                 <a href="#">
-                    <img src="./img/top_img4.jpg" alt="ChiePro 標準ツール" class="layout_img">
+                    <img src="./img/top_img4.jpg" alt="ChiePro 標準ツール" class="slider_content">
                 </a>
             </section>
 
@@ -170,7 +170,7 @@
 
     <script>
         $(document).ready(function(){
-          $('.slider').bxSlider({
+          $('.slider_wrap').bxSlider({
             auto: true,
             minSlides: 1,
             pager: false, /* スライドバー削除 */
