--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
             <!-- 3 枚目 -->
             <section>
                 <div class="slider_tips_absolute">
-                    <div class="tips tips_title fit_content">
-                        <p>学習プログラミング言語</p>
-                    </div>
+                    <div class="tips tips_title fit_content"><p>学習プログラミング言語</p></div>
 
                     <div class="tips program_lang_icon fit_content">
                         <i class="fab fa-html5"></i>
@@ -98,9 +96,7 @@
             <!-- 4 枚目 -->
             <section>
                 <div class="slider_tips_absolute">
-                    <div class="tips tips_title fit_content">
-                        <p>ChiePro 標準ツール</p>
-                    </div>
+                    <div class="tips tips_title fit_content"><p>ChiePro 標準ツール</p></div>
 
                     <div class="tips_table_wrap">
                         <table class="design_table">
