style(index.html,slider.css,common.css)添削部分を修正しました。

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- 1 枚目 -->
             <section>
-                <div class="tips slider_tips_absolute fit_content">
+                <div class="tips slider_tips_absolute fit_width">
                     <h1>ChiePro メンバー募集中</h1>
                     <p>初心者の方でも大歓迎！</p>
                     <p>対応言語多数</p> 
@@ -64,7 +64,7 @@
             <!-- 2 枚目 -->
             <section>
                 <div class="tips_solicit">
-                    <div class="tips slider_tips_absolute fit_content">
+                    <div class="tips slider_tips_absolute fit_width">
                         <p>あなたの小さなアイデアで世界は変わる。</p>
                         <p>「あったらいいな」、「こんなの作りたい」を自分の手で作ってみよう。</p>
                         <p>大きな一歩を踏み出し、私たちと共にプログラマーの道を歩みませんか？</p>
@@ -77,9 +77,9 @@
             <!-- 3 枚目 -->
             <section>
                 <div class="slider_tips_absolute">
-                    <div class="tips tips_title fit_content"><p>学習プログラミング言語</p></div>
+                    <div class="tips tips_title fit_width"><p>学習プログラミング言語</p></div>
 
-                    <div class="tips program_lang_icon fit_content">
+                    <div class="tips program_lang_icon fit_width">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
                         <i class="fab fa-php"></i>
@@ -96,10 +96,10 @@
             <!-- 4 枚目 -->
             <section>
                 <div class="slider_tips_absolute">
-                    <div class="tips tips_title fit_content"><p>ChiePro 標準ツール</p></div>
+                    <div class="tips tips_title fit_width"><p>ChiePro 標準ツール</p></div>
 
                     <div class="tips_table_wrap">
-                        <table class="design_table">
+                        <table class="tips_table">
                         <tbody>
                         <tr>
                             <td>チャットツール</td>
@@ -127,7 +127,6 @@
                         </tbody>
                         </table>
                     </div>
-
                 </div>
                 <a href="#">
                     <img src="./img/top_img4.jpg" alt="ChiePro 標準ツール" class="slider_content">
