--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <!-- header -->
-    <header id="top_head">
+    <header>
         <div class="inner">
             <h1 class="logo">Logo</h1>
             <nav>
