--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
 
     <!-- header -->
     <header>
-        
+        <div class="inner">
+            <div class="logo"><img src="./img/logo.png" alt="ChiePro"></div>
+            <nav class="global_nav">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">PRODUCT</a></li>
+                    <li><a href="#">WORKS</a></li>
+                    <li><a href="#">COMPANY</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- image slider -->
@@ -60,6 +71,21 @@
     <footer>
         <p>footer</p>
     </footer>
+
+    <script>
+        (function($) {
+            $(function() {
+                var $header = $('header');
+                $(window).scroll(function() {
+                    if ($(window).scrollTop() > 50) {
+                        $header.addClass('fixed');
+                    } else {
+                        $header.removeClass('fixed');
+                    }
+                });
+            });
+        })(jQuery);
+    </script>
 
 </body>
 </html>
