--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <header>
         <div class="inner">
             <div class="logo"><img src="./img/logo.png" alt="ChiePro"></div>
+            <div class="layout_nav">
             <nav class="global_nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
