style(nav.css,layout.css,logo.css)追加・変更をしました。

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
+            </div>
         </div>
     </header>
 
