style(nav.css,index.html)添削部分の修正をしました。

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 </head>
 
 <body>
@@ -72,8 +73,8 @@
     <footer>
         <p>footer</p>
     </footer>
-
-    <script type="text/javacsript" src="./js/jquery.globalNav.js"></script>
+    
+    <script type="text/javascript" src="./js/jquery.globalNav.js"></script>
 
 </body>
 </html>
