style(slider.css)4pageのテーブルの幅を調整

--- a/index.html
+++ b/index.html
@@ -103,24 +103,24 @@
                         <tbody>
                         <tr>
                             <td>チャットツール</td>
-                            <td>
+                            <td class="tips_table_text">
                                 <a href="https://slack.com/intl/ja-jp">Slack</a>
                             </td>
                         </tr>
                         <tr>
                             <td>バージョン管理ツール</td>
-                            <td>
+                            <td class="tips_table_text">
                                 <a href="https://github.com/">Github</a>
                             </td>
                         </tr>
                         <tr>
                             <td rowspan="2">統合開発環境</td>
-                            <td>
+                            <td class="tips_table_text">
                                 <a href="https://www.eclipse.org/">Eclipse</a>
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td class="tips_table_text">
                                 <a href="https://code.visualstudio.com/">VSCode</a>
                             </td>
                         </tr>
