--- a/index.html
+++ b/index.html
@@ -103,27 +103,27 @@
                         <table class="tips_table">
                         <tbody>
                         <tr>
-                            <td>チャットツール</td>
-                            <td class="tips_table_text">
-                                <a href="https://slack.com/intl/ja-jp">Slack</a>
-                            </td>
+                            <th>チャットツール</th>
+                            <th>
+                                <a href="https://slack.com/intl/ja-jp" target="_blank">Slack</a>
+                            </th>
                         </tr>
                         <tr>
-                            <td>バージョン管理ツール</td>
-                            <td class="tips_table_text">
-                                <a href="https://github.com/">Github</a>
-                            </td>
+                            <th>バージョン管理ツール</th>
+                            <th >
+                                <a href="https://github.com/" target="_blank">Github</a>
+                            </th>
                         </tr>
                         <tr>
-                            <td rowspan="2">統合開発環境</td>
-                            <td class="tips_table_text">
-                                <a href="https://www.eclipse.org/">Eclipse</a>
-                            </td>
+                            <th rowspan="2">統合開発環境</th>
+                            <th>
+                                <a href="https://www.eclipse.org/" target="_blank">Eclipse</a>
+                            </th>
                         </tr>
                         <tr>
-                            <td class="tips_table_text">
-                                <a href="https://code.visualstudio.com/">VSCode</a>
-                            </td>
+                            <th>
+                                <a href="https://code.visualstudio.com/" target="_blank">VSCode</a>
+                            </th>
                         </tr>
                         </tbody>
                         </table>
