--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
     </footer>
 
     <script type="text/javascript">
-        $("#fakeloader").fakeLoader();
+        $("#fakeloader").fakeLoader({
+        timeToHide:1200, //Time in milliseconds for fakeLoader disappear
+        zIndex:999, // Default zIndex
+        //spinner:"spinner1",//Options: 'spinner1', 'spinner2', 'spinner3', 'spinner4', 'spinner5', 'spinner6', 'spinner7'
+        bgColor:"#2ecc71", //Hex, RGB or RGBA colors
+        imagePath:"./img/tenor.gif", //If you want can you insert your custom image
+        });
         </script>
 
 </body>
