--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                         <i class="fab fa-php"></i>
                         <i class="fab fa-js"></i>
                         <i class="fab fa-java"></i>
+                        <i class="far fa-copyright"></i>
                     </div>
                 </div>
 
