--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     <script type="text/javascript">
         $("#page_loader").fakeLoader({
-        timeToHide:1900, //Time in milliseconds for fakeLoader disappear
-        zIndex:999, // Default zIndex
-        spinner:"spinner7",//Options: 'spinner1', 'spinner2', 'spinner3', 'spinner4', 'spinner5', 'spinner6', 'spinner7'
-        bgColor:"rgba(255, 255, 255, 1)", //Hex, RGB or RGBA colors
+            timeToHide:1200, //Time
+            zIndex:999, //zIndex
+            spinner:"spinner7",//Options
+            bgColor:"rgba(255, 255, 255, 1)", //color
         });
-        </script>
+    </script>
 
 </body>
 </html>
