style(index.html)添削を修正

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
     <script type="text/javascript">
         $("#page_loader").fakeLoader({
-            timeToHide:1900, //Time
+            timeToHide:1900, // ローディング時間
             zIndex:999, //zIndex
-            spinner:"spinner7",//Options
-            bgColor:"rgba(255, 255, 255, 1)", //color
+            spinner:"spinner7",
+            bgColor:"rgba(255, 255, 255, 1)", //　背景の色
         });
     </script>
 
