stlye(index.html,slider.css)添削部分の修正と2枚目のテキスト改行を修正

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                 timeToHide: 1900, // ローディング時間(ms)
                 zIndex: 99999, // zIndex
                 spinner: "spinner7",
-                bgColor: "rgba(255, 255, 255, 1)", // 背景の色
+                bgColor: "rgba(255, 255, 255, 1)" // 背景の色
             })
             $('.slider_wrap').bxSlider({
                 auto: true,
                 pager: false, // スライドバー削除
                 startSlide: 0,
-                pause: 6000,
+                pause: 6000
             });
         });
     </script>
