--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <!-- image slider -->
-    <div class="image_slider layout_margin_b">
+    <div id="top_image_slider" class="image_slider layout_margin_b">
         <div class="slider_wrap">
 
             <!-- 1 枚目 -->
@@ -140,7 +140,7 @@
 
         </div>
     </div>
-
+        
     <div id="site_box">
 
     <!-- container -->
