--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="./js/fakeLoader.min.js"></script>
+    <script type="text/javascript" src="./js/footer.lock.js"></script>
 </head>
 
 <body>
@@ -164,8 +165,16 @@
     </div>
 
     <!-- footer -->
-    <footer>
-        <p>footer</p>
+    <footer class="footer">
+        <div class="footer-top">
+            <p>てきすと</p>
+            <ul>
+                <li>要素</li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>aaaaaaa</p>
+        </div>
     </footer>
 
     <script type="text/javascript" src="./js/jquery.header.js"></script>
