--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="./js/fakeLoader.min.js"></script>
+    <script type="text/javascript" src="./js/footer.lock.js"></script>
 </head>
 
 <body>
@@ -164,7 +165,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer id="footer">
         <p>footer</p>
     </footer>
 
