--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="./js/fakeLoader.min.js"></script>
-    <script type="text/javascript" src="./js/footer.lock.js"></script>
 </head>
 
 <body>
@@ -165,8 +164,10 @@
     </div>
 
     <!-- footer -->
-    <footer id="footer">
-        <p>footer</p>
+    <footer>
+        <div class="footer_logo">
+            <img src="./img/logo.png">
+        </div>
     </footer>
 
     <script type="text/javascript" src="./js/jquery.header.js"></script>
