--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <nav class="global_nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">PRODUCT</a></li>
-                    <li><a href="#">WORKS</a></li>
-                    <li><a href="#">COMPANY</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">MEMBERS</a></li>
+                    <li><a href="#">ACTIVITY</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
