--- a/index.html
+++ b/index.html
@@ -165,9 +165,33 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer_logo">
-            <img src="./img/logo.png">
-        </div>
+        <div class="footer_layout">
+        <ul>
+            <li><h2>ABOUT</h2>
+                <ul>
+                    <li><a href="#">ChieProとは</a></li>
+                    <li><a href="#">目標・目的</a></li>
+                    <li><a href="#">求める人柄</a></li>
+                </ul>
+            </li>
+            <li><h2>MEMBERS</h2>
+                <ul>
+                    <li><a href="#">Shine</a></li>
+                    <li><a href="#">あべのさん</a></li>
+                    <li><a href="#">diggy</a></li>
+                    <li><a href="#">レグポン</a></li>
+                    <li><a href="#">Others</a></li>
+                </ul>
+            </li>
+            <li><h2>ACTIVITY</h2>
+                <ul>
+                    <li><a href="#">開発実績</a></li>
+                    <li><a href="#">学習言語</a></li>
+                    <li><a href="#">ChiePro標準ツール</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     </footer>
 
     <script type="text/javascript" src="./js/jquery.header.js"></script>
