style(footer.css,index.html)添削部分を修正しました。

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer_layout">
+        <div class="footer_wrap">
         <ul>
             <li><h2>ABOUT</h2>
                 <ul>
@@ -176,7 +176,7 @@
             </li>
             <li><h2>MEMBERS</h2>
                 <ul>
-                    <li><a href="#">Shine</a></li>
+                    <li><a href="#">SHINE</a></li>
                     <li><a href="#">あべのさん</a></li>
                     <li><a href="#">diggy</a></li>
                     <li><a href="#">レグポン</a></li>
