style(footer.css)コピーライトの追加

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             </li>
         </ul>
     </div>
+    <div class="footer_copyright">
+        <p>&copy 2018 ChiePro</p>
+    </div>
     </footer>
 
     <script type="text/javascript" src="./js/jquery.header.js"></script>
