style(logo.css,menmenu.css,img,jquery.header.js,jquery.meanmenu.min.js,index.html)画像追加、jsの追加、indexの変更)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- bxslider -->
@@ -26,6 +26,7 @@
     <!-- script files -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="js/jquery.meanmenu.min.js"></script>
     <script type="text/javascript" src="./js/fakeLoader.min.js"></script>
 </head>
 
@@ -35,10 +36,10 @@
 
     <!-- header -->
     <header>
-        <div class="logo_wrap"><img src="./img/logo.png" alt="ChiePro"></div>
+        <div class="logo_wrap"><img class="logo_img" src="./img/logo.png" alt="ChiePro"></div>
 
         <div class="global_nav_wrap">
-            <nav class="global_nav">
+            <nav class="global_nav mobile_nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -198,6 +199,11 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
+
+            $('.mobile_nav').meanmenu({
+                meanScreenWidth: "750" // 折り畳みメニューを表示させるウィンドウサイズ
+            });
+
             $("#page_loader").fakeLoader({
                 timeToHide: 1900, // ローディング時間(ms)
                 zIndex: 99999, // zIndex
@@ -212,6 +218,17 @@
                 pause: 6000 // ページの滞在時間(ms)
             });
         });
+
+        // 画面のサイズが変化した場合
+        $(window).resize(function() {
+            // 画面サイズが850px以上か以下で分岐
+            if(window.matchMedia("(max-width: 850px)").matches){
+            $(".logo_img").attr("src","./img/mobile_logo.png"); //500px以下の場合
+                }else{
+            $(".logo_img").attr("src","./img/logo.png");  //500px以上の場合
+            }
+        });
+
     </script>
 
 </body>
