style(media)directoryの変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="shortcut icon" href="./media/imgs/common/favicon.ico">
     <!-- FIXME:適応する画像がありません。画像の追加待ち
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -35,7 +35,7 @@
 
     <!-- header -->
     <header>
-        <div class="logo_wrap"><img src="./img/logo.png" alt="ChiePro"></div>
+        <div class="logo_wrap"><img src="./media/imgs/common/logo.png" alt="ChiePro"></div>
 
         <div class="global_nav_wrap">
             <nav class="global_nav">
@@ -62,7 +62,7 @@
                     <p>対応言語多数</p>
                 </div>
 
-                <img src="./img/top_img1.jpg" alt="ChiePro メンバー募集中" class="slider_content">
+                <img src="./media/imgs/topSlider/top_img1.jpg" alt="ChiePro メンバー募集中" class="slider_content">
             </section>
 
             <!-- 2 枚目 -->
@@ -75,7 +75,7 @@
                     </div>
                  </div>
 
-                <img src="./img/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="slider_content">
+                <img src="./media/imgs/topSlider/top_img2.jpg" alt="あなたの小さなアイデアで世界は変わる。" class="slider_content">
             </section>
 
             <!-- 3 枚目 -->
@@ -93,7 +93,7 @@
                 </div>
 
                 <a href="#">
-                    <img src="./img/top_img3.jpg" alt="学習プログラミング言語" class="slider_content">
+                    <img src="./media/imgs/topSlider/top_img3.jpg" alt="学習プログラミング言語" class="slider_content">
                 </a>
             </section>
 
@@ -134,7 +134,7 @@
                 </div>
 
                 <a href="#">
-                    <img src="./img/top_img4.jpg" alt="ChiePro 標準ツール" class="slider_content">
+                    <img src="./media/imgs/topSlider/top_img4.jpg" alt="ChiePro 標準ツール" class="slider_content">
                 </a>
             </section>
 
