--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <nav class="global_nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#ABOUT">ABOUT</a></li>
                     <li><a href="#">MEMBERS</a></li>
                     <li><a href="#">ACTIVITY</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -144,8 +144,10 @@
     <div id="site_box">
 
     <!-- container -->
-    <div class="layout_margin_b">
-        <p>container</p>
+    <div id="ABOUT" class="layout_margin_b link">
+        <div class="back_img">
+            <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+        </div>
     </div>
 
     <!--left right frame-->
