--- a/index.html
+++ b/index.html
@@ -144,25 +144,36 @@
     <div id="site_box">
 
     <!-- container -->
-    <div id="ABOUT" class="layout_margin_b link">
+    <div id="ABOUT" class="about_container link">
         <div class="back_img">
-            <p>aaaaaaaaaaaaaaaaaaaaaa</p>
+            <h1>ChieProとは</h1>
+            <img src="./img/about_logo.png" class="logo">
+            <table border="1" class="about_table">
+                <tr>
+                    <th>名称</th>
+                    <td>ChiePro</td>
+                </tr>
+                <tr>
+                    <th>代表者名</th>
+                    <td>SHINE</td>
+                </tr>
+                <tr>
+                    <th rowspan="2">活動内容</th>
+                    <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
+                </tr>
+                <tr>
+                    <td>開発中等に分からないことがあった箇所についてレクチャー</td>
+                </tr>
+                <tr>
+                    <th>設立年月日</th>
+                    <td>2017/11/13</td>
+                </tr>
+                <tr>
+                    <th>会員数</th>
+                    <td>9名</td>
+                </tr>
+            </table>
         </div>
-    </div>
-
-    <!--left right frame-->
-    <div class="l_r_container layout_margin_b">
-        <!-- left container -->
-        <div class="left_container">
-            <p>left-container</p>
-        </div>
-
-        <!-- right container -->
-        <div class="right_container">
-            <p>tight-centainer</p>
-        </div>
-    </div>
-
     </div>
 
     <!-- footer -->
