style(aboutContainer.css,layout.css,style.css,index.html,img.add)Introductionを追加しました。layout.css大幅に変更

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     <div id="ABOUT" class="about_container link">
         <div class="back_img">
             <h1>ChieProとは</h1>
-            <img src="./img/about_logo.png" class="logo">
-            <table border="1" class="about_table">
+            <img src="./img/about_logo.png">
+            <table class="about_table">
                 <tr>
                     <th>名称</th>
                     <td>ChiePro</td>
