--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
 
     <!-- container -->
     <div id="ABOUT" class="about_container link">
-        <div class="back_img">
+        <div class="back_size_top about_chiepro_color">
             <h1>ChieProとは</h1>
-            <img src="./img/about_logo.png">
+            <div class="about_container_img">
+                <img src="./img/about_logo.png">
+            </div>
             <table class="about_table">
                 <tr>
                     <th>名称</th>
@@ -176,6 +178,19 @@
         </div>
     </div>
 
+    <!-- purpose -->
+    <div id="ABOUT" class="about_purpose">
+        <div class="back_size about_purpose_color">
+            <h1>活動目的</h1>
+            <div class="purpose_text">
+                <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで個々の技術力向上を目指しています。</p><br>
+                <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
+            </div>
+            <div class="about_purpose_img">
+                <img src="./img/about_purpose.jpg">
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer>
         <div class="footer_wrap">
