style(index.html,layout.css,aboutPurpose.css)Purposeを追加しました。

--- a/index.html
+++ b/index.html
@@ -144,51 +144,51 @@
     <div id="site_box">
 
     <!-- container -->
-    <div id="ABOUT" class="about_container link">
-        <div class="back_size_top about_chiepro_color">
-            <h1>ChieProとは</h1>
-            <div class="about_container_img">
-                <img src="./img/about_logo.png">
+        <div id="ABOUT" class="about_container link">
+            <div class="back_size_top">
+                <h1>ChieProとは</h1>
+                <div class="about_container_img">
+                    <img src="./img/about_logo.png">
+                </div>
+                <table class="about_table">
+                    <tr>
+                        <th>名称</th>
+                        <td>ChiePro</td>
+                    </tr>
+                    <tr>
+                        <th>代表者名</th>
+                        <td>SHINE</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">活動内容</th>
+                        <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
+                    </tr>
+                    <tr>
+                        <td>開発中等に分からないことがあった箇所についてレクチャー</td>
+                    </tr>
+                    <tr>
+                        <th>設立年月日</th>
+                        <td>2017/11/13</td>
+                    </tr>
+                    <tr>
+                        <th>会員数</th>
+                        <td>9名</td>
+                    </tr>
+                </table>
             </div>
-            <table class="about_table">
-                <tr>
-                    <th>名称</th>
-                    <td>ChiePro</td>
-                </tr>
-                <tr>
-                    <th>代表者名</th>
-                    <td>SHINE</td>
-                </tr>
-                <tr>
-                    <th rowspan="2">活動内容</th>
-                    <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
-                </tr>
-                <tr>
-                    <td>開発中等に分からないことがあった箇所についてレクチャー</td>
-                </tr>
-                <tr>
-                    <th>設立年月日</th>
-                    <td>2017/11/13</td>
-                </tr>
-                <tr>
-                    <th>会員数</th>
-                    <td>9名</td>
-                </tr>
-            </table>
         </div>
-    </div>
 
-    <!-- purpose -->
-    <div id="ABOUT" class="about_purpose">
-        <div class="back_size about_purpose_color">
-            <h1>活動目的</h1>
-            <div class="purpose_text">
-                <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで個々の技術力向上を目指しています。</p><br>
-                <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
-            </div>
-            <div class="about_purpose_img">
-                <img src="./img/about_purpose.jpg">
-            </div>
+        <!-- purpose -->
+        <div id="ABOUT" class="about_purpose">
+                <div class="purpose_text">
+                    <h1>活動目的</h1>
+                    <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで</p><br>
+                    <p>個々の技術力向上を目指しています。</p><br>
+                    <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
+                </div>
+                <div class="about_purpose_img">
+                    <img src="./img/about_purpose.jpg">
+                </div>
         </div>
     </div>
     <!-- footer -->
