--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
         </div>
     </div>
 
-    <div id="site_box">
-
     <!-- container -->
-    <div id="ABOUT" class="about_container link">
+    <div id="ABOUT">
+        <div class="about_title">
             <h1>ChieProとは</h1>
-            <img src="./img/about_logo.png">
+        </div>
+        <div class="about_container">
             <table class="about_table">
                 <tr>
                     <th>名称</th>
@@ -172,6 +172,8 @@
                     <td>9名</td>
                 </tr>
             </table>
+            <p><img src="./img/about_logo.png"></p>
+        </div>
     </div>
 
     <!-- footer -->
