生液言ってすいません。

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <nav class="global_nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#ABOUT">ABOUT</a></li>
+                    <li><a href="#about">ABOUT</a></li>
                     <li><a href="#">MEMBERS</a></li>
                     <li><a href="#">ACTIVITY</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -142,7 +142,7 @@
     </div>
 
     <!-- container -->
-    <div id="ABOUT">
+    <div id="about">
         <div class="about_title">
             <h1>ChieProとは</h1>
         </div>
