--- a/index.html
+++ b/index.html
@@ -180,13 +180,27 @@
             <div class="about_title">
                 <h1>活動目的</h1>
             </div>
-            <div class="purpose_text">
+            <div class="about_text">
                 <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで個々の技術力向上を目指しています。</p>
+                <p>一人一人が作りたいものを作り、その中で技術習得し、さらにいいものを作ります。必要であれば、有識者が指導致します。</p>
                 <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
             </div>
             <p><img src="./img/about_purpose.jpg"></p>
         </div>
+
+        <!-- talent -->
+        <div class="about_talent">
+            <div class="about_title">
+                <h1>求める人材</h1>
+            </div>
+            <div class="talent_text">
+                <p>初心者でも問題なし！経験者優遇！モラルがある方なら誰でも大歓迎です。</p>
+            </div>
+        </div>
+
     </div>
+
+
     <!-- footer -->
     <footer>
         <div class="footer_wrap">
